<resources>
    <string name="app_name">Weather API</string>
    <string name="weather_report_loading_error">an error occurred while loading data from server</string>
    <string name="default_time">0:00</string>
    <string name="default_city_name">Minsk</string>
    <string name="default_region_name">Belarus</string>
    <string name="default_temperature">0</string>
    <string name="fahrenheit_symbol">℉</string>
    <string name="celsius_symbol">℃</string>
    <string name="choose_city">Choose city</string>
    <string name="add_city">Enter city name:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="city_name_bundle">City name</string>
</resources>